2007-06-05  Luca Bruno  <lethalman88@gmail.com>

	* syx-object.c: removed is_static field not needed at the moment
	All parts have been updated
	* syx-init.c (_syx_create_class): changed from FALSE to TRUE the value to be put in has_refs (was a bad mistake)
	* syx-memory.c (syx_memory_gc): added some debugging informations
	* syx-memory.c (syx_memory_gc_begin, syx_memory_gc_end): added for creating GC transactions
	* syx-bytecode.c (syx_bytecode_gen_instruction): generate 16 bit-wide instructions
	All calls to it and the interpreter have been updated

2007-06-04  Luca Bruno  <lethalman88@gmail.com>

	* configure.ac: removed -pedantic since we use bitfields that are a GCC extension
	* Everything has been refactored using SyxOop instead of working on raw pointers. This can be slower but allows all platforms (32bit or 64bit) to access the memory by indexes

	* syx-interp.c (syx_interp_leave_context_and_answer): removed an argument because the return context has been inserted into method contexts
	* syx-interp.c (syx_interp_send_message): fixed message arguments array creation
	* syx-object.c (syx_byte_array_*): added
	* syx-object.c (syx_*_context_new): copy arguments to the context arguments stack
	* syx-object.h (SYX_METHOD_CONTEXT_RETURN_CONTEXT): moved from block contexts for speed matters
	* syx-object.h (SYX_BLOCK_ARGUMENTS_TOP): holds the index to the arguments stack
	* syx-object.h (SYX_PROCESSOR_SCHEDULER_*): old mistake SYX_PROCESS_SCHEDULER
	* syx-primitives.c (SmallInteger_*): bug fix
	* syx-parser.c (_syx_parser_parse_block): now operate on the same parser instead of creating a new one, to share arguments and temporaries
	* syx-parser.c (syx_parser_new): removed last two arguments, not needed anymore because of shared scopes
	* syx-parser.c (syx_parser_parse): store bytecodes as a ByteArray
	* syx-parser.c (_syx_parser_find_*): return -1 instead of 0 since syx_varsize now is not unsigned anymore