@@ -110,8 +110,8 @@ typedef enum
     SYX_BYTECODE_MARK_ARGUMENTS,
     SYX_BYTECODE_SEND_MESSAGE,
     SYX_BYTECODE_SEND_SUPER,
-    /*    SYX_BYTECODE_SEND_UNARY,
-	  SYX_BYTECODE_SEND_BINARY,*/
+    SYX_BYTECODE_SEND_UNARY,
+    SYX_BYTECODE_SEND_BINARY,
 
     SYX_BYTECODE_DO_PRIMITIVE,
     SYX_BYTECODE_DO_SPECIAL,
